--- a/bot/admin/web/src/app/faq/train/train.component.html
+++ b/bot/admin/web/src/app/faq/train/train.component.html
@@ -1,3 +1,16 @@
-<h5 class="h5 mb-4">Qualification bot de FAQ</h5>
-<tock-train-header (onSearch)="search($event)"></tock-train-header>
-<tock-train-grid [filter]="filter"></tock-train-grid>
+<h5 class="h5 mb-4">Qualification {{applicationName}}</h5>
+<tock-train-header [ngClass]="{ 'tock--docked': isDocked() }" [filter]="filter" (onSearch)="search($event)">
+</tock-train-header>
+<div class="tock-train-viewport d-flex justify-content-between w-100"
+     [ngClass]="{
+     'tock--docked-panel': isDocked(),
+     'tock--full_width': viewMode === 'FULL_WIDTH',
+     'tock--full_width--small': viewMode === 'RESPONSIVE_FULL_WIDTH'
+     }"
+>
+  <tock-train-grid (onDetails)="details($event)" [viewMode]="viewMode" [filter]="filter"></tock-train-grid>
+  <tock-train-sidebar *ngIf="isDocked()"
+                      (onSentenceSelect)="sentenceSelect($event)"
+                      (onClose)="undock()"
+                      [sentence]="selectedSentence"></tock-train-sidebar>
+</div>
