--- a/bot/admin/web/src/app/faq/train/train-grid/train-grid.component.scss
+++ b/bot/admin/web/src/app/faq/train/train-grid/train-grid.component.scss
@@ -1,8 +1,6 @@
+@import url(../../common/_base_faq.scss);
 
-
-.background {
-  background: inherit;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+.tock-robot {
+  width: 8%;
+  margin-right: 20px;
 }
