--- a/bot/admin/web/src/app/faq/train/train-header/train-header.component.scss
+++ b/bot/admin/web/src/app/faq/train/train-header/train-header.component.scss
@@ -4,7 +4,12 @@
   width: 400px;
 }
 
-nb-icon, {
+
+.tock-input-clear {
+  cursor: pointer;
+}
+
+.tock--no-select {
   user-select: none;
   pointer-events: none;
 }
