--- a/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.scss
+++ b/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.scss
@@ -10,3 +10,9 @@
 .tock-search-bar {
   width: calc(100% - 40px);
 }
+
+.tock-burger-icon {
+  cursor: pointer;
+  transform: scale(1.2);
+  user-select: none;
+}
