--- a/bot/admin/web/src/app/faq/qa/qa.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa.component.html
@@ -1,6 +1,36 @@
 <h5 class="h5 mb-4">Questions & Answers {{applicationName}}</h5>
-<tock-qa-header [filter]="filter" (onSearch)="search($event)">
+<tock-qa-header [viewMode]="viewMode"
+                [ngClass]="{ 'tock--docked': isDocked() }"
+                [filter]="filter"
+                (onSearch)="search($event)"
+                (onNew)="openNewSidepanel()"
+                (onImport)="openImportSidepanel()">
 </tock-qa-header>
-<div class="tock-train-viewport d-flex justify-content-between w-100">
-  <tock-qa-grid (onDetails)="details($event)" [filter]="filter"></tock-qa-grid>
+<div class="tock-qa-viewport d-flex justify-content-between w-100"
+     [ngClass]="{
+     'tock--docked-panel': isDocked(),
+     'tock--full_width': viewMode === 'FULL_WIDTH',
+     'tock--full_width--small': viewMode === 'RESPONSIVE_FULL_WIDTH'
+     }"
+>
+  <tock-qa-grid (onDetails)="details($event)" [viewMode]="viewMode" [filter]="filter"></tock-qa-grid>
+
+  <tock-inview-sidebar [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('import')" (onClose)="undock()">
+    <div tock-header>
+      <h5>Import FAQ</h5>
+    </div>
+
+    <tock-qa-sidebar-import-content tock-content></tock-qa-sidebar-import-content>
+
+  </tock-inview-sidebar>
+
+  <tock-inview-sidebar [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('new')" (onClose)="undock()">
+    <div tock-header>
+      <h5>New FAQ</h5>
+    </div>
+
+    <tock-qa-sidebar-new-content tock-content></tock-qa-sidebar-new-content>
+
+  </tock-inview-sidebar>
+
 </div>
