--- a/bot/admin/web/src/app/faq/train/train-sidebar/train-sidebar.component.scss
+++ b/bot/admin/web/src/app/faq/train/train-sidebar/train-sidebar.component.scss
@@ -169,7 +169,8 @@ $chat-bubble-border-mine: darken(desaturate($chat-bubble-bg-mine, 3%), 5%);
   bottom: -70px;
   right: 5px;
 
-  filter: hue-rotate(279deg) brightness(1.2);
+  filter: hue-rotate(279deg);
+  filter: hue-rotate(279deg) brightness(1.2) drop-shadow(2px 2px 2px #AAA);
   opacity: .9;
 }
 
@@ -238,6 +239,7 @@ $chat-bubble-border-mine: darken(desaturate($chat-bubble-bg-mine, 3%), 5%);
     width: 16%;
     bottom: -70px;
     left: 5px;
+    filter: drop-shadow(2px 2px 2px #AAA)
   }
 }
 
