--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -68,15 +68,15 @@
                        nbTooltip="If selected, this option uses normalized text models - for intent only models">
             Normalized text models
           </nb-checkbox>
-          <nb-checkbox class="separator" [(ngModel)]="application.mergeEngineTypes"
+          <nb-checkbox *ngIf="!application.normalizeText" class="separator" [(ngModel)]="application.mergeEngineTypes"
                        nbTooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">
             Use entity models
           </nb-checkbox>
-          <nb-checkbox class="separator" *ngIf="!application.mergeEngineTypes" [(ngModel)]="application.useEntityModels"
+          <nb-checkbox class="separator" *ngIf="!application.normalizeText && !application.mergeEngineTypes" [(ngModel)]="application.useEntityModels"
                        nbTooltip="If selected, built-in entity models results are provided only for info and potential entity disambiguation">
             Entity disambiguation only
           </nb-checkbox>
-          <nb-checkbox class="separator" [(ngModel)]="application.supportSubEntities"
+          <nb-checkbox *ngIf="!application.normalizeText" class="separator" [(ngModel)]="application.supportSubEntities"
                        nbTooltip="If selected, you can use subentities in your nlp models">Allow subentities
           </nb-checkbox>
         </p>
