--- a/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.scss
+++ b/bot/admin/web/src/app/faq/qa/qa-grid-item/qa-grid-item.component.scss
@@ -6,11 +6,13 @@ nb-toggle {
 }
 
 .tock-col-a {
-  flex: 0 0 35%;
+  flex: 0 0 20%;
+  white-space: pre-line;
 }
 
 .tock-col-b {
-  flex: 0 0 25%;
+  flex: 0 0 40%;
+  white-space: pre-line;
 }
 
 .tock-col-c {
@@ -36,13 +38,18 @@ nb-card,nb-card-body {
 
 nb-card-body {
 
+  /* Ability to add absolute elements inside */
+  position: relative;
+  top: 0;
+  left: 0;
+
   &.tock--docked-panel,&.tock--full_width--small {
     .tock-col-a {
-      flex: 0 0 40%;
+      flex: 0 0 30%;
     }
 
     .tock-col-b {
-      flex: 0 0 30%;
+      flex: 0 0 45%;
     }
 
     nb-toggle {
