--- a/bot/admin/web/src/app/faq/qa/qa.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa.component.html
@@ -30,22 +30,8 @@
 
   <tock-inview-sidebar [isContentHeader]="true" [ngClass]="'tock-qa-sidebar'" *ngIf="isPanelDocked('edit')" (onClose)="undock()">
     <div tock-header>
-      <h5>Create a new FAQ</h5>
+      <h5>{{editorPanelName || 'QA Editor'}}</h5>
     </div>
-    <tock-qa-sidebar-editor-content
-      (validityChanged)="onEditorValidityChanged($event)"
-      [fq]="currentItem" tock-content>
-
-    </tock-qa-sidebar-editor-content>
-
-    <ng-container tock-footer>
-      <button [disabled]="!editorFormValid" class="float-right mx-2"  nbButton status="primary" size="small">
-        Create {{editorFormValid}}
-      </button>
-      <button class="float-right mx-2" nbButton outline status="primary" size="small" >
-        Cancel
-      </button>
-    </ng-container>
 
     <ng-container tock-contentheader>
       <span (click)="activateEditorTab('Info')" class="tock-tab"
@@ -62,6 +48,19 @@
       </span>
     </ng-container>
 
+    <tock-qa-sidebar-editor-content tock-content
+      (validityChanged)="onEditorValidityChanged($event)"
+      [fq]="currentItem">
+    </tock-qa-sidebar-editor-content>
+
+    <ng-container tock-footer>
+      <button class="float-left mx-2" nbButton outline status="primary" size="small" (onClose)="undock()" >
+        Cancel
+      </button>
+      <button [disabled]="!editorFormValid" class="float-right mx-2"  nbButton status="primary" size="small">
+        Save
+      </button>
+    </ng-container>
 
   </tock-inview-sidebar>
 
