fixes plus selected item style

--- a/bot/admin/web/src/app/faq/qa/qa-grid/qa-grid.component.scss
+++ b/bot/admin/web/src/app/faq/qa/qa-grid/qa-grid.component.scss
@@ -8,3 +8,8 @@
   width: 8%;
   margin-right: 20px;
 }
+
+tock-qa-grid-item.tock--selected {
+  border-left: 7px solid #3366ff;
+  padding-left: 10px
+}
