--- a/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
+++ b/bot/admin/web/src/app/faq/qa/qa-header/qa-header.component.html
@@ -2,12 +2,13 @@
   <nb-card-body class="d-flex align-items-center p-2 flex-wrap">
     <div class="col-4 d-flex justify-content-start">
 
-      <nb-select [size]="'small'" placeholder="Tags">
-        <nb-option value="1">
-          Tag 1
-        </nb-option>
-        <nb-option value="2">
-          Tag 2
+      <nb-select [size]="'small'"
+                 multiple
+                 [(ngModel)]="filter.tags"
+                 (ngModelChange)="selectedTagsChanged($event)"
+                 placeholder="Tags">
+        <nb-option *ngFor="let tag of availableTags" value="{{tag}}">
+         {{tag}}
         </nb-option>
       </nb-select>
       <nb-checkbox [checked]="onlyActives" (checkedChange)="toggleOnlyActives($event)"ngClass="ml-2 d-flex">Active</nb-checkbox>
